@@ -9,6 +9,7 @@ Change log next version
 	  new JsonPath().using(new JsonPathConfig(..)).get(..);
 * It's not possible to configure REST Assured to return BigDecimal instead of floats and doubles. You can do this either statically using:  
 	  RestAssured.config = new RestAssuredConfig().jsonPathConfig(new JsonPathConfig(..));
+* Added support for automatically converting a String to BigDecimal in JsonPath
 
 Change log 1.7.2 (2012-12-15)
 -----------------------------
